Rename "Where" DTO.
